- Code Smells: Low